<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_qm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chloe.timedquizapp.MainActivity"
    android:layout_centerHorizontal="true">


    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/QM"
        android:gravity="center"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/logo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_QM"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo"/>

    <LinearLayout
        android:id="@+id/functions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight = ".6"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_below="@+id/logo2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:id="@+id/btnFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_function_QM"
            android:onClick="enterQuiz"/>
        <Space
            android:layout_width="30dp"
            android:layout_height="10dp"/>

        <Button
            android:id="@+id/btnSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_function_QM"
            android:onClick="enterQT"/>

        <Space
            android:layout_width="30dp"
            android:layout_height="10dp"/>

        <Button
            android:id="@+id/btnThird"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third_function_QM"
            android:onClick="checkQTRecord"/>
    </LinearLayout>

</RelativeLayout>
